--- a/TP1/EntregaFinal/stylesheet.css
+++ b/TP1/EntregaFinal/stylesheet.css
@@ -1,6 +1,12 @@
+html {
+    font-family: Century Gothic;
+}
+
 .my-canvas {
-    border: 1px solid black;
-    cursor: crosshair;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+        
 }
 
 body {
@@ -14,6 +20,10 @@ body {
 }
 
 .tool-bar {
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+
     justify-items: center;
     align-items: center;
     height: 40%;
@@ -66,6 +76,6 @@ label {
     display: none;
 }
 
-.canvas-imagen-original {
+.canvas-invisible {
     display: none;
 }
