--- a/TP1/EntregaFinal/stylesheet.css
+++ b/TP1/EntregaFinal/stylesheet.css
@@ -1,4 +1,4 @@
-html {
+* {
     font-family: Century Gothic;
 }
 
@@ -56,7 +56,7 @@ body {
     -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-
+    background-color: #f9f9f9;
     justify-items: center;
     align-items: center;
     height: 40%;
@@ -68,7 +68,7 @@ box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
 
 .tool-bar, .image-buttons-bar {
     display: grid;
-    width: 60%;
+    width: 58%;
     margin-left: 10%;
 }
 
