--- a/TP1/EntregaFinal/stylesheet.css
+++ b/TP1/EntregaFinal/stylesheet.css
@@ -12,73 +12,123 @@
 
 .herramientas {
     display: grid;
-    margin-top: 3%;
-    grid-template-rows: 1fr 3fr;
-    width: 85%;
+    grid-template-rows: max-content max-content;
 }
 
-.image-tools {
+.drawing-tools {
+    width: 60%;
+    margin-top: 4%;
+    justify-self: center;
+    grid-column: 2 / -1;
+    grid-row: 2 / 3;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    border-radius: 8px;
+    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    background-color: #f9f9f9;
+    justify-items: center;
+    align-items: center;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    padding-left: 1%;
+    padding-top: 1%;
+    height: fit-content;
+}
+
+.lapiz, .goma, .color-picker, .tool-size {
+    grid-row: 2 / 3;
+}
+
+.lapiz-text, .goma-text, .color-picker-text {
+    margin: 0;
+    align-self: flex-start;
+}
+
+.lapiz {
+    grid-column: 1 / 2;
+}
+
+.goma {
+    grid-column: 3 / 4;
+}
+
+.color-picker {
+    height: 38px;
+    width: 42px;
+}
+
+.tool-size {
+    display: grid;
+    grid-row: 4 / -1;
+    grid-column: 1 / -1;
+    width: 100%;
+}
+
+.color-picker, .size-text {
+    grid-column: 2 / 3;
+}
+
+.size-text {
+    grid-column: 1 / -1;
+
+    margin-bottom: 0;
+}
+
+.range {
+    width: 80%;
+    justify-self: center;
 }
 
 body {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    background-color: #deebdd;
-    background-image: linear-gradient(315deg, #deebdd 0%, #bbdbbe 74%);
+    background-color: #3399ff;
 }
 
-.range {
-    width: 100%;
+.btn-descargar-imagen, .btn-limpiar-canvas {
+    margin-left: 6%;
 }
 
-.color-picker {
-    width: 35px;
+.btn-descargar-imagen {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
 }
 
+.btn-descargar-canvas {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+}
 
+.btn-select-imagen {
+    grid-column: 1 / 2;
+}
+
+.btn-limpiar-canvas {
+    grid-column: 2 / 3;
+}
 
 .filtros {
-    margin-top: 10%;
-    margin-left: 30%;
-    grid-column-start: 2;
+    margin-top: 4%;
+    grid-column-start: 1;
     grid-column-end: -1;
-    grid-row-start: 1;
-    width: 100%;
+    grid-row-start: 3;
     justify-content: center;
 }
 
-.tool-bar {
-    border-radius: 8px;
-
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-    background-color: #f9f9f9;
-    justify-items: center;
-    align-items: center;
-    height: 40%;
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-columns: 1fr 1fr;
-    padding-left: 1%;
-    padding-top: 1%;
-    width: 90%;
-    margin-top: 10%;
-    margin-left: 20%;
-}
-
-.tool-bar, .image-buttons-bar {
+.drawing-tools, .image-buttons-bar {
     display: grid;
 }
 
+.image-buttons-bar, .drawing-tools, .filtros {
+    margin-left: 6%;
+}
+
 .image-buttons-bar {
-    margin-right: 8%;
-    margin-left: 10%;
-    grid-column-start: 2;
-    grid-column-end: -1;
+    grid-column-start: 1;
+    grid-column-end: 2;
     grid-row-start: 0;
-    height: 3%;
+    height: fit-content;
 }
 
 .image-buttons-bar button {
@@ -90,26 +140,17 @@ box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
 }
 
 .lapiz-img, .goma-img {
-    width: 25px;
-    height: 25px;
+    width: 34px;
+    height: 34px;
 }
 
 .image-buttons-bar button {
     background-color: #f9f9f9;
-    padding: 2%;
-    margin-bottom: 2%;
+    padding: 4%;
+    margin-bottom: 4%;
     border: 1px solid black;
 }
 
-.tool-button {
-    justify-self: center;
-    height: 80%;
-}
-
-.tool-size {
-    justify-self: center;
-    margin-right: 10%;
-}
 
 label {
     align-self: center;
@@ -145,8 +186,8 @@ box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
     display: inline-block;
   }
 
-  .dropdown, .dropbtn {
-      width: 70%;
+  .dropdown, .dropbtn, .dropdown-content {
+      width: 100%;
   }
   
   /* Dropdown Content (Hidden by Default) */
@@ -156,16 +197,16 @@ box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    
-  }
-  
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
+}
+
+
+/* Links inside the dropdown */
+.dropdown-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    text-align: center;
   }
   
   /* Change color of dropdown links on hover */
@@ -179,4 +220,8 @@ box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {
     background-color: #f4f4f4;
+  }
+
+  .oculto {
+      display: none;
   }
