--- a/TP1/EntregaFinal/stylesheet.css
+++ b/TP1/EntregaFinal/stylesheet.css
@@ -1,6 +1,6 @@
 * {
     font-family: Century Gothic;
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .my-canvas {
@@ -193,6 +193,10 @@ box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.75);
     background-color: #f9f9f9;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    height: 200px;
+    overflow: auto;
+    scroll-behavior: smooth;
+
 }
 
 
