--- a/TP2/EntregaFinal/stylesheet.css
+++ b/TP2/EntregaFinal/stylesheet.css
@@ -3,6 +3,24 @@ body {
 }
 
 .canvas {
+    position: absolute;
     justify-self: center;
     border: 1px solid black;
+    z-index: 1;
 }
+
+.canvas-holder{
+    position: relative;
+}
+
+.canvas-tablero {
+    position: absolute;
+    z-index: 0;
+}
+/* 
+<div style="position: relative;">
+ <canvas id="layer1" width="100" height="100" 
+   style="position: absolute; left: 0; top: 0; z-index: 0;"></canvas>
+ <canvas id="layer2" width="100" height="100" 
+   style="position: absolute; left: 0; top: 0; z-index: 1;"></canvas>
+</div> */
