--- a/TP2/EntregaFinal/stylesheet.css
+++ b/TP2/EntregaFinal/stylesheet.css
@@ -17,17 +17,18 @@ body {
     z-index: 0;
     justify-self: center;
     align-self: center;
-    background-color: lightcoral;
 
 }
 
-/* .canvas-background {
-    position: absolute;
-    z-index: -1;
-    justify-self: center;
-    align-self: center;
-    background-color: lightcoral;
-} */
+.hidden {
+    display: none;
+}
+
+.turno {
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 10%;
+}
 
 .canvas-holder{
     display: grid;
@@ -51,7 +52,7 @@ body {
   /* Modal Content/Box */
   .modal-content {
       background-color: #fefefe;
-      margin: 15% auto; /* 15% from the top and centered */
+      margin: 6% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
     width: 40%; /* Could be more or less, depending on screen size */
