--- a/TP2/EntregaFinal/stylesheet.css
+++ b/TP2/EntregaFinal/stylesheet.css
@@ -1,11 +1,28 @@
 body {
     background-image: url(img/background.jpg);
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
 }
 
 select, input, body, button {
     font-family: "Grandstander";
+}
+
+.restart-div {
+    margin: 5px;
+    cursor: pointer;
+    justify-self: right;
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 50px;
+    padding: 10px;
+    width: fit-content;
+    height: fit-content;
+}
+
+header {
+    display: grid;
 }
 
 input {
@@ -14,10 +31,11 @@ input {
 
 .canvas-holder{
     display: grid;
-    width: 100%;
+    width: 1000px;
     height: 500px;
-    justify-self: center;
-}
+    margin-left: auto;
+    margin-right: auto;
+  }
 
 .canvas, .canvas-tablero {
     grid-row: 1 / -1;
@@ -40,15 +58,16 @@ input {
 }
 
 .turno {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    justify-self: center;
     background: rgba(255, 255, 255, 0.35);
+    border-radius: 50px;
     width: fit-content;
     font-size: 30px;
     text-align: center;
     height: fit-content;
-    margin-left: auto;
-    margin-right: auto;
     padding: 14px;
-    border-radius: 50px;
 }
 
 .presentacion-juego {
@@ -58,7 +77,7 @@ input {
     border-radius: 5%;
     height: fit-content;
     width: 500px;
-    margin-top: 42px;
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
   
@@ -103,7 +122,7 @@ input {
 }
 
 .ayuda-juego p {
-    font-size: 24px;
+    font-size: 30px;
     padding-bottom: 4%;
 }
 
