agrega countdown lanzamiento pelicula

--- a/TP3/EntregaFinal/css/stylesheet.css
+++ b/TP3/EntregaFinal/css/stylesheet.css
@@ -7,9 +7,15 @@ html {
     scroll-behavior: smooth;
 }
 
+@font-face {
+    font-family: myFirstFont;
+    src: url(font/RINGM___.TTF);
+}
+
 body {
     /* margin: 0; */
     /* display: grid; */
+    font-family: myFirstFont;
     background-color: #e5e5e5;
 }
 
@@ -20,7 +26,7 @@ body {
 }
 
 .movie-title {
-    background-image: url("images/movie_titleSmaller.png");
+    background-image: url("../images/movie_titleSmaller.png");
     height: 22%;
     background-repeat: no-repeat;
     width: 38%;
@@ -31,7 +37,7 @@ body {
 }
 
 .movie-characters {
-    background-image: url("images/characters2.png");
+    background-image: url("../images/characters2.png");
     height: 50%;
     width: 100%;
     background-position: bottom;
@@ -59,7 +65,7 @@ body {
 }
 
 .add-clouds {
-    background-image: url("images/nubes.png");
+    background-image: url("../images/nubes.png");
     animation: scroll 20s infinite linear;
 }
 
@@ -93,7 +99,7 @@ body {
 /* Left card */
 .card:first-child {
     background-color: lightcoral;
-    background-image: url(images/frodo.jpg);
+    background-image: url(../images/frodo.jpg);
 }
 
 .expandir {
@@ -119,13 +125,21 @@ body {
     margin-left: 50px;
     margin-right: 50px;
     background-color: rebeccapurple;
-    background-image: url(images/gollum.webp);
+    background-image: url(../images/gollum.webp);
 }
 
 /* Right card */
 .card:nth-child(3) {
     background-color: burlywood;
-    background-image: url(images/gandalf.png);
+    background-image: url(../images/gandalf.png);
+}
+
+@keyframes beating {
+    0% { transform: scale( 1.2 ); }
+    5% { transform: scale(1.2); }
+    45% { transform: scale(1.1); }
+    75% { transform: scale(1.1); }
+    100% { transform: scale( 1 ); }
 }
 
 @keyframes opacity {
@@ -138,7 +152,48 @@ body {
     100% { background-position-x: 5440px;}
 }
 
-@keyframes gradualBlue {
-    0% { background-color: lightcoral; }
-    100% { background-color: blue;}
+/*************************   COUNTDOWN   *************************/
+.countdown {
+    display: grid;
+    grid-template-rows: repeat(3, fit-content(100%));
+    grid-template-columns: repeat(4, 1fr);
+    margin-right: auto;
+    margin-left: auto;
+    height: fit-content;
+    height: 100%;
+    width: 70%;
+    text-align: center;
+    font-size: 10vw;
+}
+
+.countdown div p:last-child {
+    font-size: 20%;
+}
+
+.countdown p:first-child {
+    margin-bottom: 6%;
+    grid-column: 1 / -1;
+}
+
+.countdown p:last-child {
+    margin-top: 6%;
+    grid-row: 3 / -1;
+}
+
+.countdown p:last-child,    .countdown p:first-child {
+    grid-column: 1 / -1;
+    font-size: 12vh;
+}
+
+.days, .hours, .minutes, .seconds {
+    display: grid;
+    grid-template-rows: 140px 1fr;
+    grid-row: 2 / 3;
+    border: 4px double rgba(252,190,0,0.47);
+    border-radius: 20px;
+    margin-right: 10%;
+}
+
+.seconds div {
+    animation: beating 1s linear infinite;
 }
