--- a/TP3/EntregaFinal/css/stylesheet.css
+++ b/TP3/EntregaFinal/css/stylesheet.css
@@ -27,13 +27,45 @@ body {
 
 .movie-title {
     background-image: url("../images/movie_titleSmaller.png");
-    height: 22%;
+    height: 150px;
     background-repeat: no-repeat;
     width: 38%;
     background-position: top;
-    background-size: cover;
+    background-size: contain;
     position: fixed;
     opacity: 0.9;
+}
+
+nav {
+    display: flex;
+    grid-template-columns: repeat(3, 150px);
+    grid-template-rows: 1fr;
+    left: 64vw;    
+    position: fixed;
+    z-index: 1;
+    text-align: end;
+    height: 150px;
+    align-items: center;
+}
+
+.formulario {
+    margin-right:0  !important;
+}
+
+nav p {
+    margin-right: 10%;
+    grid-row: 1 / 1;
+    justify-self: center;
+    font-size: 160%;
+    cursor: pointer;
+    width: fit-content;
+    transition: 0.1s;
+    color: #2f2f2f;
+}
+
+nav p:hover {
+    transform: scale(1.1);
+    color: black;
 }
 
 .movie-characters {
@@ -66,7 +98,7 @@ body {
 
 .add-clouds {
     background-image: url("../images/nubes.png");
-    animation: scroll 20s infinite linear;
+    animation: scroll 40s infinite linear;
 }
 
 .division {
@@ -240,7 +272,7 @@ body {
     height: 100%;
 }
 
-img {
+.image {
     object-fit: cover;
     width: 100%;
     height: 90vh;
@@ -272,4 +304,135 @@ img {
     margin-right: 4%;
     grid-column: 3 / 4;
     justify-self: right;
+}
+
+/*************************   Calendario   *************************/
+.accordion {
+    display: grid;
+    margin: auto;
+    /* margin-top: 80px; */
+    top: 130%;
+    width: 80%;
+}
+
+.nav-calendario .movie-title{
+    position: relative;
+    grid-row: 1 / 2;
+}
+
+.nav-calendario nav {
+    position: absolute;
+}
+
+.nav-calendario {
+    /* display: grid; */
+    height: 180px;
+}
+
+.evento button {
+    font-size: 1.4em;
+    width: 100%;
+    height: 50px;
+    border: none;
+    outline: none;  
+    font-family: myFirstFont;
+    cursor: pointer;
+    text-align: left;
+    transition: 0.3s;
+    padding-left: 18px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .evento button:hover {
+    background-color: #ccc;
+}
+
+.evento img {
+    border-radius: 10px;
+    transition: linear .1s;
+}
+
+/* .evento img:hover {
+    transform: scale(1.1) rotateY(54deg) ;
+} */
+
+.panel {
+    /* display: grid; */
+    padding: 0 18px;
+    background-color: white;
+    /* display: none; */
+    max-height: 0;
+    overflow: hidden;
+    /* padding: 8%; */
+    padding-left: 8%;
+    padding-right: 8%;
+    transition: max-height 0.7s ease-out;
+}
+
+.none {
+    display: none;
+}
+
+.evento button img {
+    float: right;
+    margin: 0;
+    margin-right: 2%;
+}
+
+.evento p {
+    margin: 0;
+    margin-top: 2%;
+    margin-right: 2%;
+    text-align: justify;
+}
+
+.evento h1 {
+    text-align: center;
+    font-size: 2em;
+}
+
+.primer-evento img {
+    display: block;
+}
+
+.primer-evento .primer-imagen {
+    margin: 2%;
+    margin-top: 0;
+    float: right;
+}
+
+.primer-evento .segunda-imagen {
+    float: left;
+    margin-top: 2%;
+    margin-right: 2%;
+    margin-bottom: 2%;
+}
+
+.segundo-evento img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  
+}
+
+.tercer-evento img {
+    margin: 2%;
+    /* margin-top: 0; */
+    display: block;
+    float: right;
+}
+
+.cuarto-evento img {
+    float: left;
+    display: block;
+    margin-top: 2%;
+    margin-right: 2%;
+    margin-bottom: 2%;
+}
+
+.cuarto-evento .segunda-imagen {
+    float: right;
+    display: block;
+    margin-top: 2%;
+    margin-left: 2%;
 }
