--- a/TP3/EntregaFinal/css/stylesheet.css
+++ b/TP3/EntregaFinal/css/stylesheet.css
@@ -64,7 +64,7 @@ nav p {
 }
 
 nav p:hover {
-    transform: scale(1.1);
+    transform: scale(1.2);
     color: black;
 }
 
@@ -81,11 +81,11 @@ nav p:hover {
 }
 
 .opacity-animation {
-    animation: opacity 1.5s linear;
+    animation: opacity 1s linear;
 }
 
 .hide {
-    display: none;
+    display: none !important;
 }
 
 .clouds {
@@ -130,7 +130,8 @@ nav p:hover {
     display: inline-block;
     height: 80vh;
     background-size: cover;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 10px 10px 5px 0px rgba(160,160,160,0.75);
+    transition: 0.14s;
 }
 
 .gradual-blue {
@@ -315,16 +316,16 @@ nav p:hover {
     width: 80%;
 }
 
-.nav-calendario .movie-title{
+.nav-calendario .movie-title, .nav-formulario .movie-title{
     position: relative;
     grid-row: 1 / 2;
 }
 
-.nav-calendario nav {
+.nav-calendario nav, .nav-formulario nav {
     position: absolute;
 }
 
-.nav-calendario {
+.nav-calendario, .nav-formulario {
     /* display: grid; */
     height: 180px;
 }
@@ -435,4 +436,128 @@ nav p:hover {
     display: block;
     margin-top: 2%;
     margin-left: 2%;
+}
+
+/*************************   Formulario   *************************/
+.formulario form {
+    display: grid;
+    width: fit-content;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    z-index: 1;
+}
+
+form .h1 {
+    font-size: 4.5vh;
+    margin-left: 4%;
+    margin-right: 4%;
+    margin-bottom: 0;
+    justify-self: center;
+    width: 80%;
+}
+
+.email-input, .mensaje-input, .boton-enviar {
+    width: 50%;
+}
+
+.email-input {
+    height: 4vh;
+}
+
+.email-input:focus, .mensaje-input:focus {
+    animation: expandir .4s linear;
+}
+
+.email-input, .mensaje-input {
+    font-size: 2vh;
+    justify-self: center;
+}
+
+.email-paragraph, .mensaje-paragraph, .boton-enviar, .enviado {
+    font-size: 3vh;
+}
+
+.email-paragraph, .mensaje-paragraph {
+    margin-bottom: 0;
+    /* backdrop-filter: blur(5px); */
+    width: fit-content;
+    justify-self: center;
+}
+
+.email-input, .mensaje-input {
+    border-radius: 6px;
+    outline: none;
+    font-family: myFirstFont;
+    border: outset;
+}
+
+.boton-enviar {
+    font-family: myFirstFont;
+    margin-top: 4%;
+    height: 5vh;
+    justify-self: center;
+    margin-bottom: 2%;
+    border-radius: 100px;
+    /* width: fit-content; */
+    outline: none;
+}
+
+.form-aceptado {
+    animation: anchoBoton 1s linear;
+}
+
+@keyframes anchoBoton {
+    0% {width: 50%; }
+    100% {width: 0%; font-size: 0;}
+}
+
+form, .form-img {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+}
+
+.formulario {
+    display: grid;
+}
+
+.form-img {
+    border-radius: 40px;
+    opacity: 0.4;
+    margin-right: auto;
+    margin-left: auto;
+    object-fit: cover;
+    width: 50%;
+    height: 70vh;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+
+.enviado, .boton-enviar {
+    grid-row: 6 / 7;
+    grid-column: 1 / 2;
+}
+
+.enviado {
+    display: flex;
+}
+
+.green-tick, .enviado {
+    justify-self: center;
+    align-self: center;
+}
+
+.nav-formulario {
+    height: fit-content;
+}
+
+@keyframes shake {
+    0% { margin-left: 0rem; }
+    25% { margin-left: 0.5rem; }
+    75% { margin-left: -0.5rem; }
+    100% { margin-left: 0rem; }
+}
+
+.error-name {
+    animation: shake 0.2s ease-in-out 0s 2;
+    box-shadow: 0 0 0.5em red
 }
